This update resolves issue #35 specified in https://wiki.duraspace.org/display/DSPINT/MC+Release+1.0+Tasks: Updates the spacing of elements on the login page.
git-svn-id: https://svn.duraspace.org/duracloud-priv/trunk@1274 3c0c4179-e91d-42e7-a082-8e2792ce3676

--- a/account-management-app/src/main/webapp/static/css/global2.css
+++ b/account-management-app/src/main/webapp/static/css/global2.css
@@ -250,7 +250,7 @@ li a:hover{
 }
 
 #login-button {
-	margin-right:10px;
+	margin-top:5px;
 }
 /*
 *this unrequired setting is used here purely for 
@@ -905,7 +905,6 @@ form ol li {
   border-bottom: 1px solid rgba(255, 255, 255, .3);
   line-height: 30px;
   list-style: none;
-  padding: 5px 10px;
   margin-bottom: 5px;
 }
 
